# rust-mustache-processor

./: Cargo.toml  README.en.md  README.md
.github/workflows/: release.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: cli-code-generation-plan.md  cli-functional-design-plan.md  cli-nfr-design-plan.md  cli-nfr-requirements-plan.md  core-engine-code-generation-plan.md  core-engine-functional-design-plan.md  core-engine-nfr-design-plan.md  core-engine-nfr-requirements-plan.md  release-automation-code-generation-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  unit-of-work-plan.md
aidlc-docs/inception/requirements/: release-automation-requirement-verification-questions.md  release-automation-requirements.md  requirements.md  (+1 more)
src/: ast.rs  error.rs  lib.rs  main.rs  parser.rs  partial.rs  renderer.rs  value.rs
src/cli/: args.rs  data_loader.rs  io.rs  mod.rs
tests/proptest/: array_repeat.rs  directory_resolver_idempotence.rs  escape_roundtrip.rs  main.rs  partial_recursion_guard.rs  section_complement.rs  section_nesting.rs  support.rs  text_passthrough.rs
tests/spec/: conformance.rs  main.rs
(+18 files in other folders)
