[package]
name = "rust-mustache-processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "mustache_processor"
path = "src/lib.rs"

[[bin]]
name = "mustache"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"

[dev-dependencies]
proptest = "1"
