[package]
name = "rust-mustache-processor"
version = "0.1.1"
edition = "2024"

[lib]
name = "mustache_processor"
path = "src/lib.rs"

[[bin]]
name = "mustache"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_norway = { version = "0.9", optional = true }

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json", "dep:serde_norway"]

[dev-dependencies]
proptest = "1"
